finished responsive.html

--- a/responsive.html
+++ b/responsive.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : index.html
 Assignment  : Lab 4 Exercise B
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Darin Vicaldo
+Submission  : February 7, 2024
 Description : Responsive Layouts.
 =========================================================
 -->
@@ -18,10 +18,11 @@ Description : Responsive Layouts.
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- First, link the menu.css file here -->
+	<link rel="stylesheet" href="menu.css">
 
 	<style>	
 		/* Remove borders at the end, they have been add just for detecting positions of items*/	
-		div {
+		/* .div {
 			border: 1px dashed gray;	
 		}
 		.row{ 
@@ -35,7 +36,7 @@ Description : Responsive Layouts.
 		}
 		.small {
 			border: 1px solid yellow;	
-		}		
+		}		*/
 	</style>
 
     <style>
@@ -48,35 +49,82 @@ Description : Responsive Layouts.
         .news-item { padding: 10px; }
 		
 		.row { 
-			/*I need some CSS codes.*/		
+			/*I need some CSS codes.*/
+			display: block;
+			box-sizing: border-box;	
+			clear: both;
 		}
 
 		.large, .medium, .small {
 			/*I need some CSS codes.*/
+			float: left;
+			box-sizing: border-box;
 		}
 		
 		.gap {
 			/*I need some CSS codes.*/
+			height: 100px;
+			clear: both;
+			width: 100%;
 		}
 
 		@media screen and (min-width: 769px) {			
 			.large { 
 				/*I need some CSS codes.*/
+				width: 100%;
 			}
 			.medium { 
 				/*I need some CSS codes.*/
+				width: 70%;
 			}
 			.small { 
 				/*I need some CSS codes.*/
+				width: 30%;
 			 }
+			
 		}
 
         @media screen and (max-width: 768px) {
             /*I need some CSS codes.*/
+			.large {
+				width: 100%;
+			}
+			.medium {
+				max-width: 60%;
+			}
+			.small{
+				max-width: 40%;	
+			}
+			.menu {
+				width: 100%;
+				float: none;
+			}
+			.main {
+				width: 100%;
+				margin: 0;
+				padding: 0;
+			}
+		
+			
+
         }
 
         @media screen and (max-width: 480px) {
 			/*I need some CSS codes.*/
+			.main {
+				width: 100%;
+				margin: 0;
+				padding: 0;
+			}
+			.large, .medium, .small {
+				min-width: 100%;
+			}
+			.h1 {
+				font-size: 18px;
+			}
+			.gap {
+				margin: 75px;
+			}
         }
 
         
