--- a/responsive.html
+++ b/responsive.html
@@ -122,9 +122,7 @@ Description : Responsive Layouts.
 			.h1 {
 				font-size: 18px;
 			}
-			.gap {
-				margin: 75px;
-			}
+		
         }
 
         
@@ -183,7 +181,7 @@ Description : Responsive Layouts.
 				<!-- Medium news item -->
 				<div class="medium news-item">
 					<header>
-						<h1>Mahdi Ansari Takes a Historic Spacewalk Near the ISS</h1>
+						<h1>Darin Vicaldo Takes a Historic Spacewalk Near the ISS</h1>
 					</header>
 					<img src="images/medium.jpg" alt="Medium Image">
 					<article>
@@ -191,7 +189,7 @@ Description : Responsive Layouts.
 						<p>In an unprecedented feat of human courage and technological prowess, astronaut Mahdi Ansari completed a spacewalk near the International Space Station (ISS), marking a new milestone in space exploration.</p>
 
 						<h3>A Breathtaking Journey</h3>
-						<p>Ansari, aboard the spacecraft Voyager X, ventured out into the void of space, capturing breathtaking views of Earth and conducting important research that could pave the way for future interstellar travel.</p>
+						<p>Vicaldo, aboard the spacecraft Voyager X, ventured out into the void of space, capturing breathtaking views of Earth and conducting important research that could pave the way for future interstellar travel.</p>
 
 						<h3>Pushing the Boundaries of Science</h3>
 						<p>The successful spacewalk not only demonstrates human resilience but also advances our understanding of space and our capabilities to explore further into the unknown.</p>
